--- a/views/adminlogin.ejs
+++ b/views/adminlogin.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <title>login-Admin</title>
     <link rel="stylesheet" href="/stylesheets/login.css">
 </head>
 <body class="body">
