--- a/views/user.ejs
+++ b/views/user.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>User</title>
     <link href="/stylesheets/style.css" rel="stylesheet">
   <script src="http://cdn.tailwindcss.com"></script>
 </head>
