--- a/views/adminlogin.ejs
+++ b/views/adminlogin.ejs
@@ -8,7 +8,7 @@
 </head>
 <body class="body">
     <span id="login">
-        <div><h1 id="head1">Admin Login Page</h1></div>
+        <div><h1 id="head1" style="margin: 0 20px 0 0;">Admin Login Page</h1></div>
         <div class="container">
             <form action="/admin/login" method="post">
                
