--- a/views/adminregister.ejs
+++ b/views/adminregister.ejs
@@ -22,7 +22,7 @@
     
         <div id="container">
             <div id="header">
-                <h2>Registration Page</h2>
+                <h2>Admin Registration</h2>
             </div>
             <form action="/register/admin" method="post" >
                 <div class="form-control " >
