--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,8 +49,8 @@
             </div>
             <div id="student">
                 <!-- <img src="new folder/girl4-Photoroom.png" height="350px" alt=""> -->
-                <img src="/public/images/girl-Photoroom.png" height="350px" width="200px" alt="">
-                <img src="/public/images/boy-Photoroom.png" height="350px" width="300px" alt="">
+                <img src="/images/girl-Photoroom.png" height="350px" width="200px" alt="">
+                <img src="/images/boy-Photoroom.png" height="350px" width="300px" alt="">
                 
             </div>
          </section>
