--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
     <span id="login">
         <div><h1 id="head1">Login Page</h1></div>
         <div class="container">
-            <form action="/login/user" method="post">
+            <form action="/login/user" method="post" autocomplete="off">
                
                 <input type="text" id="name" name="email" value="" placeholder="Enter email"><br> <br>
                 <input id="pass" type="password" placeholder="Password" name="password"> 
